[gd_scene load_steps=9 format=3 uid="uid://cab66ph13le1a"]

[ext_resource type="Script" path="res://Scripts/profile.gd" id="1_0owv6"]
[ext_resource type="Texture2D" uid="uid://dgt146hw0hx73" path="res://Images/top_home.png" id="1_3a885"]
[ext_resource type="Texture2D" uid="uid://cw22h7mu55mvv" path="res://Images/logo_account.png" id="2_lrano"]
[ext_resource type="Texture2D" uid="uid://dtk0cce46is38" path="res://Images/account_circle.png" id="2_xps4i"]
[ext_resource type="Texture2D" uid="uid://cqvqqrtj7p7io" path="res://Images/add_home.png" id="3_72p7h"]
[ext_resource type="Texture2D" uid="uid://c6r2xhwl5uqxj" path="res://Images/output.png" id="4_08n8a"]
[ext_resource type="Theme" uid="uid://cqppled3h7rd2" path="res://resources/defaultTheme.tres" id="5_akp77"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkjxg"]
bg_color = Color(1, 1, 1, 1)

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0owv6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99998, 0.998029)
color = Color(0.85098, 0.85098, 0.85098, 1)

[node name="Top" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 190.0
grow_horizontal = 2
scale = Vector2(1, 1.02381)
texture = ExtResource("1_3a885")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 21.0
offset_right = 70.0
offset_bottom = 160.0
grow_horizontal = 2
texture = ExtResource("2_lrano")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -74.0
offset_right = 206.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.996333, 0.991546)
theme_override_styles/panel = SubResource("StyleBoxFlat_wkjxg")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Account" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
icon = ExtResource("2_xps4i")
flat = true

[node name="Home" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("3_72p7h")
flat = true
icon_alignment = 2

[node name="Output" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("4_08n8a")
flat = true

[node name="PanelContainer1" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 270.0
offset_right = 386.0
offset_bottom = 413.0
theme = ExtResource("5_akp77")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer1/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "Antonio Jesús"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer1/MarginContainer/VBoxContainer/Name"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Surname" type="Label" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "Sánchez Rosales"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer1/MarginContainer/VBoxContainer/Surname"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Email" type="Label" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "correoelectronico@gmail.com"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer1/MarginContainer/VBoxContainer/Email"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Number" type="Label" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "9887412335"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 515.0
offset_right = 387.0
offset_bottom = 663.0
theme = ExtResource("5_akp77")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Text" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "Establecer mi jornada laboral"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/MarginContainer/VBoxContainer/Text"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Accept" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_akp77")
text = "Aceptar"
flat = true
icon_alignment = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/Accept" to="." method="_on_accept_pressed"]
